convert react components to svelte and shimmy through logic to get search results to searchresults component

--- a/src/SearchResults/SearchResults.css
+++ b/src/SearchResults/SearchResults.css
@@ -8,12 +8,17 @@
 }
 
 .SearchResults p {
-    margin-bottom: 50px;
     font-size: 14px;
+    margin-top: 5px;
+    text-align: center;
 }
 
 .SearchResults h3 {
     text-align: center;
     font-size: 18px;
     margin-bottom: 6px;
+}
+
+.tracks {
+    margin-bottom: 50px;
 }
